# FREDVisualizer

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: env.py  logging_config.py  main.py
backend/app/cache/: cache_service.py  keys.py  redis.py
backend/app/middleware/: request_logger.py
backend/app/routes/: route.py
backend/app/services/: fred_search_service.py  fred_series_service.py
backend/tests/services_tests/: fred_series_service_test.py
frontend/: .dockerignore  Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/components/: Chart.tsx  ChartCard.tsx  Header.tsx  SeriesForm.tsx  Sidebar.tsx
